--- a/bundle/manifests/jws-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/jws-operator.clusterserviceversion.yaml
@@ -145,6 +145,7 @@ spec:
           - delete
           - get
           - list
+          - update
           - watch
         - apiGroups:
           - build.openshift.io
