--- a/bundle/manifests/jws-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/jws-operator.clusterserviceversion.yaml
@@ -316,7 +316,7 @@ spec:
                 - --upstream=http://127.0.0.1:8080/
                 - --logtostderr=true
                 - --v=10
-                image: quay.io/brancz/kube-rbac-proxy:v0.19.0
+                image: registry.redhat.io/rhacm2/kube-rbac-proxy-rhel8:v2.9
                 name: kube-rbac-proxy
                 ports:
                 - containerPort: 8443
