--- a/bundle/manifests/jws-operator-controller-manager-metrics-service_v1_service.yaml
+++ b/bundle/manifests/jws-operator-controller-manager-metrics-service_v1_service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
+  creationTimestamp: null
   labels:
-    control-plane: controller-manager
-    app.kubernetes.io/name: jws-operator
     app.kubernetes.io/managed-by: kustomize
-  name: controller-manager-metrics-service
-  namespace: system
+    app.kubernetes.io/name: jws-operator
+    control-plane: controller-manager
+  name: jws-operator-controller-manager-metrics-service
 spec:
   ports:
   - name: https
@@ -14,5 +14,7 @@ spec:
     protocol: TCP
     targetPort: 8443
   selector:
-    control-plane: controller-manager
     app.kubernetes.io/name: jws-operator
+    control-plane: controller-manager
+status:
+  loadBalancer: {}
