--- a/bundle/manifests/web.servers.org_webservers.yaml
+++ b/bundle/manifests/web.servers.org_webservers.yaml
@@ -1,9 +1,9 @@
----
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.18.0
+  creationTimestamp: null
   name: webservers.web.servers.org
 spec:
   group: web.servers.org
@@ -663,3 +663,9 @@ spec:
         specReplicasPath: .spec.replicas
         statusReplicasPath: .status.replicas
       status: {}
+status:
+  acceptedNames:
+    kind: ""
+    plural: ""
+  conditions: null
+  storedVersions: null
