--- a/config/rbac/webserver_admin_role.yaml
+++ b/config/rbac/webserver_admin_role.yaml
@@ -1,9 +1,9 @@
 # This rule is not used by the project jws-operator itself.
 # It is provided to allow the cluster admin to help manage permissions for users.
 #
-# Grants permissions to create, update, and delete resources within the web.servers.org.
-# This role is intended for users who need to manage these resources
-# but should not control RBAC or manage permissions for others.
+# Grants full permissions ('*') over web.servers.org.
+# This role is intended for users authorized to modify roles and bindings within the cluster,
+# enabling them to delegate specific permissions to other users or groups as needed.
 
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
@@ -11,20 +11,14 @@ metadata:
   labels:
     app.kubernetes.io/name: jws-operator
     app.kubernetes.io/managed-by: kustomize
-  name: webserver-editor-role
+  name: webserver-admin-role
 rules:
 - apiGroups:
   - web.servers.org
   resources:
   - webservers
   verbs:
-  - create
-  - delete
-  - get
-  - list
-  - patch
-  - update
-  - watch
+  - '*'
 - apiGroups:
   - web.servers.org
   resources:
