--- a/bundle/manifests/jws-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/jws-operator.clusterserviceversion.yaml
@@ -8,16 +8,17 @@ metadata:
           "apiVersion": "web.servers.org/v1alpha1",
           "kind": "WebServer",
           "metadata": {
-            "name": "webserver-example"
+            "labels": {
+              "app.kubernetes.io/managed-by": "kustomize",
+              "app.kubernetes.io/name": "jws-operator"
+            },
+            "name": "webserver-sample"
           },
-          "spec": {
-            "applicationName": "webapp",
-            "replicas": 1,
-            "useInsightsClient": false
-          }
+          "spec": null
         }
       ]
     capabilities: Basic Install
+    createdAt: "2025-07-31T08:28:44Z"
     operators.operatorframework.io/builder: operator-sdk-v1.41.1
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v4
   name: jws-operator.v0.0.1
@@ -28,7 +29,6 @@ spec:
     owned:
     - kind: WebServer
       name: webservers.web.servers.org
-      version: v1alpha1
       specDescriptors:
       - description: The base for the names of the deployed application resources
         displayName: Application Name
@@ -37,17 +37,17 @@ spec:
         displayName: Replicas
         path: replicas
         x-descriptors:
-          - 'urn:alm:descriptor:com.tectonic.ui:podCount'
+        - urn:alm:descriptor:com.tectonic.ui:podCount
       - description: Use session clustering
         displayName: Enable Session Clustering in Tomcat
         path: useSessionClustering
         x-descriptors:
-          - 'urn:alm:descriptor:com.tectonic.ui:booleanSwitch'
+        - urn:alm:descriptor:com.tectonic.ui:booleanSwitch
       - description: Use Insights client (works only with JWS 6.1+ images)
-        displayName: Enable Red Hat Insights 
+        displayName: Enable Red Hat Insights
         path: useInsightsClient
         x-descriptors:
-          - 'urn:alm:descriptor:com.tectonic.ui:booleanSwitch'
+        - urn:alm:descriptor:com.tectonic.ui:booleanSwitch
       - description: (Deployment method 1) Application image
         displayName: Web Image
         path: webImage
@@ -63,14 +63,17 @@ spec:
       - description: Persistent logs configuration
         displayName: Persistent Logs
         path: persistentLogs
-      - description: Configuration of the resources used by the WebServer e.g. CPU and memory.
+      - description: Configuration of the resources used by the WebServer e.g. CPU
+          and memory.
         displayName: Pod Resources
         path: podResources
         x-descriptors:
-          - 'urn:alm:descriptor:com.tectonic.ui:resourceRequirements'
-      - description: SecurityContext defines the security capabilities required to run the application.
+        - urn:alm:descriptor:com.tectonic.ui:resourceRequirements
+      - description: SecurityContext defines the security capabilities required to
+          run the application.
         displayName: Security Context
         path: securityContext
+      version: v1alpha1
   description: WebServer operator can manage JBoss Web Server images and Apache Tomcat
     images.
   displayName: WebServer
@@ -83,24 +86,29 @@ spec:
       - rules:
         - apiGroups:
           - ""
-          resourceNames:
-          - pull-secret
           resources:
-          - secrets
+          - configmaps
+          - persistentvolumeclaims
+          - pods
+          - services
           verbs:
+          - create
+          - delete
           - get
           - list
           - watch
         - apiGroups:
-          - config.openshift.io
+          - ""
           resources:
-          - clusterversions
+          - namespaces
           verbs:
           - get
-          - list
-          - watch
-        serviceAccountName: jws-operator-insights
-      - rules:
+        - apiGroups:
+          - ""
+          resources:
+          - services/finalizers
+          verbs:
+          - update
         - apiGroups:
           - apps
           resources:
@@ -117,11 +125,6 @@ spec:
           - apps
           resources:
           - deployments/finalizers
-          verbs:
-          - update
-        - apiGroups:
-          - apps
-          resources:
           - jws-operator
           verbs:
           - update
@@ -157,58 +160,6 @@ spec:
           - get
           - list
           - watch
-        - apiGroups:
-          - ""
-          resources:
-          - configmaps
-          verbs:
-          - create
-          - delete
-          - get
-          - list
-          - watch
-        - apiGroups:
-          - ""
-          resources:
-          - namespaces
-          verbs:
-          - get
-        - apiGroups:
-          - ""
-          resources:
-          - persistentvolumeclaims
-          verbs:
-          - create
-          - delete
-          - get
-          - list
-          - watch
-        - apiGroups:
-          - ""
-          resources:
-          - pods
-          verbs:
-          - create
-          - delete
-          - get
-          - list
-          - watch
-        - apiGroups:
-          - ""
-          resources:
-          - services
-          verbs:
-          - create
-          - delete
-          - get
-          - list
-          - watch
-        - apiGroups:
-          - ""
-          resources:
-          - services/finalizers
-          verbs:
-          - update
         - apiGroups:
           - image.openshift.io
           resources:
@@ -297,46 +248,33 @@ spec:
         serviceAccountName: jws-operator-controller-manager
       deployments:
       - label:
+          app.kubernetes.io/managed-by: kustomize
+          app.kubernetes.io/name: jws-operator
           control-plane: controller-manager
         name: jws-operator-controller-manager
         spec:
           replicas: 1
           selector:
             matchLabels:
+              app.kubernetes.io/name: jws-operator
               control-plane: controller-manager
           strategy: {}
           template:
             metadata:
+              annotations:
+                kubectl.kubernetes.io/default-container: manager
               labels:
+                app.kubernetes.io/name: jws-operator
                 control-plane: controller-manager
             spec:
               containers:
               - args:
-                - --secure-listen-address=0.0.0.0:8443
-                - --upstream=http://127.0.0.1:8080/
-                - --logtostderr=true
-                - --v=10
-                image: quay.io/brancz/kube-rbac-proxy:v0.19.0
-                name: kube-rbac-proxy
-                ports:
-                - containerPort: 8443
-                  name: https
-                  protocol: TCP
-                resources: {}
-              - args:
-                - --health-probe-bind-address=:8081
-                - --metrics-bind-address=127.0.0.1:8080
+                - --metrics-bind-address=:8443
                 - --leader-elect
+                - --health-probe-bind-address=:8081
                 command:
                 - /manager
-                env:
-                  - name: OPERATOR_NAMESPACE
-                    valueFrom:
-                      fieldRef:
-                        fieldPath: metadata.namespace
-                  - name: INSIGHTS_ENABLED
-                    value: "true"
-                image: quay.io/mmadzin/jws-operator:latest
+                image: quay.io/mmadzin/jws-operator:new-sdk
                 livenessProbe:
                   httpGet:
                     path: /healthz
@@ -352,160 +290,23 @@ spec:
                   periodSeconds: 10
                 resources:
                   limits:
-                    cpu: 200m
-                    memory: 100Mi
+                    cpu: 500m
+                    memory: 128Mi
                   requests:
-                    cpu: 100m
-                    memory: 20Mi
+                    cpu: 10m
+                    memory: 64Mi
                 securityContext:
                   allowPrivilegeEscalation: false
-              securityContext:
-                runAsNonRoot: true
-              serviceAccountName: jws-operator-controller-manager
-              terminationGracePeriodSeconds: 10
-      - label:
-          app.kubernetes.io/name: jws-operator-insights
-          control-plane: controller-manager
-        name: jws-operator-insights
-        spec:
-          replicas: 1
-          selector:
-            matchLabels:
-              app.kubernetes.io/name: jws-operator-insights
-              control-plane: controller-manager
-          strategy: {}
-          template:
-            metadata:
-              annotations:
-                kubectl.kubernetes.io/default-container: insights
-              labels:
-                app.kubernetes.io/name: jws-operator-insights
-                control-plane: controller-manager
-            spec:
-              containers:
-                - args:
-                    - --health-probe-bind-address=:8081
-                    - --metrics-bind-address=0
-                    - --leader-elect
-                  env:
-                    - name: RELATED_IMAGE_INSIGHTS_PROXY
-                      value: registry.redhat.io/3scale-amp2/apicast-gateway-rhel8:3scale2.15
-                    - name: INSIGHTS_BACKEND_DOMAIN
-                      value: console.redhat.com
-                    - name: USER_AGENT_PREFIX
-                      value: jws-operator/0.0.1-dev
-                    - name: WATCH_NAMESPACE
-                      valueFrom:
-                        fieldRef:
-                          fieldPath: metadata.annotations['olm.targetNamespaces']
-                    - name: OPERATOR_NAME
-                      value: jws-operator-insights
-                    - name: OPERATOR_NAMESPACE
-                      valueFrom:
-                        fieldRef:
-                          fieldPath: metadata.namespace
-                    - name: INSIGHTS_ENABLED
-                      value: "true"
-                  image: registry.redhat.io/insights-runtimes-tech-preview/runtimes-inventory-rhel8-operator:latest
-                  livenessProbe:
-                    httpGet:
-                      path: /healthz
-                      port: 8081
-                    initialDelaySeconds: 15
-                    periodSeconds: 20
-                  name: insights
-                  readinessProbe:
-                    httpGet:
-                      path: /readyz
-                      port: 8081
-                    initialDelaySeconds: 5
-                    periodSeconds: 10
-                  resources:
-                    limits:
-                      cpu: "1"
-                      memory: 256Mi
-                    requests:
-                      cpu: 100m
-                      memory: 64Mi
-                  securityContext:
-                    allowPrivilegeEscalation: false
-                    capabilities:
-                      drop:
-                        - ALL
+                  capabilities:
+                    drop:
+                    - ALL
               securityContext:
                 runAsNonRoot: true
                 seccompProfile:
                   type: RuntimeDefault
-              serviceAccountName: jws-operator-insights
+              serviceAccountName: jws-operator-controller-manager
               terminationGracePeriodSeconds: 10
       permissions:
-      - rules:
-          - apiGroups:
-              - ""
-            resources:
-              - configmaps
-            verbs:
-              - get
-              - list
-              - watch
-              - create
-              - update
-              - patch
-              - delete
-          - apiGroups:
-              - coordination.k8s.io
-            resources:
-              - leases
-            verbs:
-              - get
-              - list
-              - watch
-              - create
-              - update
-              - patch
-              - delete
-          - apiGroups:
-              - ""
-            resources:
-              - events
-            verbs:
-              - create
-              - patch
-          - apiGroups:
-              - ""
-            resources:
-              - configmaps
-            verbs:
-              - create
-              - delete
-              - get
-              - list
-              - update
-              - watch
-          - apiGroups:
-              - ""
-            resources:
-              - configmaps/finalizers
-              - secrets
-              - services
-            verbs:
-              - create
-              - get
-              - list
-              - update
-              - watch
-          - apiGroups:
-              - apps
-            resources:
-              - deployments
-              - deployments/finalizers
-            verbs:
-              - create
-              - get
-              - list
-              - update
-              - watch
-        serviceAccountName: jws-operator-insights
       - rules:
         - apiGroups:
           - ""
@@ -559,7 +360,4 @@ spec:
   maturity: alpha
   provider:
     name: WebServer community
-  relatedImages:
-  - image: registry.redhat.io/3scale-amp2/apicast-gateway-rhel8:3scale2.15
-    name: insights-proxy
   version: 0.0.1
