--- a/bundle/manifests/web.servers.org_webservers.yaml
+++ b/bundle/manifests/web.servers.org_webservers.yaml
@@ -472,7 +472,7 @@ spec:
                       type: string
                     type: array
                   persistenceVolumes:
-                    description: Persistence defines the PersistentVolumeClaimList
+                    description: PersistentVolumes define the PersistentVolumeClaimSpec
                       specificaitons
                     items:
                       description: |-
