Fix in volume requirements, test scripts and new bundle

--- a/bundle/manifests/jws-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/jws-operator.clusterserviceversion.yaml
@@ -8,20 +8,20 @@ metadata:
           "apiVersion": "web.servers.org/v1alpha1",
           "kind": "WebServer",
           "metadata": {
-            "labels": {
-              "app.kubernetes.io/managed-by": "kustomize",
-              "app.kubernetes.io/name": "jws-operator"
-            },
-            "name": "webserver-sample"
+            "name": "webserver-example"
           },
-          "spec": null
+          "spec": {
+            "applicationName": "webapp",
+            "replicas": 1,
+            "useInsightsClient": false
+          }
         }
       ]
-    capabilities: Basic Install
-    createdAt: "2025-07-31T08:28:44Z"
+    capabilities: Seamless Upgrades
+    createdAt: "2025-08-14T14:31:47Z"
     operators.operatorframework.io/builder: operator-sdk-v1.41.1
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v4
-  name: jws-operator.v0.0.1
+  name: jws-operator.v0.0.2
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -29,6 +29,7 @@ spec:
     owned:
     - kind: WebServer
       name: webservers.web.servers.org
+      version: v1alpha1
       specDescriptors:
       - description: The base for the names of the deployed application resources
         displayName: Application Name
@@ -37,17 +38,17 @@ spec:
         displayName: Replicas
         path: replicas
         x-descriptors:
-        - urn:alm:descriptor:com.tectonic.ui:podCount
+          - 'urn:alm:descriptor:com.tectonic.ui:podCount'
       - description: Use session clustering
         displayName: Enable Session Clustering in Tomcat
         path: useSessionClustering
         x-descriptors:
-        - urn:alm:descriptor:com.tectonic.ui:booleanSwitch
+          - 'urn:alm:descriptor:com.tectonic.ui:booleanSwitch'
       - description: Use Insights client (works only with JWS 6.1+ images)
         displayName: Enable Red Hat Insights
         path: useInsightsClient
         x-descriptors:
-        - urn:alm:descriptor:com.tectonic.ui:booleanSwitch
+          - 'urn:alm:descriptor:com.tectonic.ui:booleanSwitch'
       - description: (Deployment method 1) Application image
         displayName: Web Image
         path: webImage
@@ -63,17 +64,14 @@ spec:
       - description: Persistent logs configuration
         displayName: Persistent Logs
         path: persistentLogs
-      - description: Configuration of the resources used by the WebServer e.g. CPU
-          and memory.
+      - description: Configuration of the resources used by the WebServer e.g. CPU and memory.
         displayName: Pod Resources
         path: podResources
         x-descriptors:
-        - urn:alm:descriptor:com.tectonic.ui:resourceRequirements
-      - description: SecurityContext defines the security capabilities required to
-          run the application.
+          - 'urn:alm:descriptor:com.tectonic.ui:resourceRequirements'
+      - description: SecurityContext defines the security capabilities required to run the application.
         displayName: Security Context
         path: securityContext
-      version: v1alpha1
   description: WebServer operator can manage JBoss Web Server images and Apache Tomcat
     images.
   displayName: WebServer
@@ -83,6 +81,26 @@ spec:
   install:
     spec:
       clusterPermissions:
+      - rules:
+        - apiGroups:
+          - ""
+          resourceNames:
+          - pull-secret
+          resources:
+          - secrets
+          verbs:
+          - get
+          - list
+          - watch
+        - apiGroups:
+          - config.openshift.io
+          resources:
+          - clusterversions
+          verbs:
+          - get
+          - list
+          - watch
+        serviceAccountName: jws-operator-insights
       - rules:
         - apiGroups:
           - ""
@@ -128,17 +146,6 @@ spec:
           - jws-operator
           verbs:
           - update
-        - apiGroups:
-          - apps.openshift.io
-          resources:
-          - deploymentconfigs
-          verbs:
-          - create
-          - delete
-          - get
-          - list
-          - update
-          - watch
         - apiGroups:
           - build.openshift.io
           resources:
@@ -248,32 +255,33 @@ spec:
         serviceAccountName: jws-operator-controller-manager
       deployments:
       - label:
-          app.kubernetes.io/managed-by: kustomize
-          app.kubernetes.io/name: jws-operator
           control-plane: controller-manager
         name: jws-operator-controller-manager
         spec:
           replicas: 1
           selector:
             matchLabels:
-              app.kubernetes.io/name: jws-operator
               control-plane: controller-manager
           strategy: {}
           template:
             metadata:
-              annotations:
-                kubectl.kubernetes.io/default-container: manager
               labels:
-                app.kubernetes.io/name: jws-operator
                 control-plane: controller-manager
             spec:
               containers:
               - args:
-                - --metrics-bind-address=:8443
+                - --metrics-bind-address=:8080
                 - --leader-elect
                 - --health-probe-bind-address=:8081
                 command:
                 - /manager
+                env:
+                  - name: OPERATOR_NAMESPACE
+                    valueFrom:
+                      fieldRef:
+                        fieldPath: metadata.namespace
+                  - name: INSIGHTS_ENABLED
+                    value: "true"
                 image: quay.io/mmadzin/jws-operator:new-sdk
                 livenessProbe:
                   httpGet:
@@ -293,7 +301,7 @@ spec:
                     cpu: 500m
                     memory: 128Mi
                   requests:
-                    cpu: 10m
+                    cpu: 100m
                     memory: 64Mi
                 securityContext:
                   allowPrivilegeEscalation: false
@@ -306,7 +314,138 @@ spec:
                   type: RuntimeDefault
               serviceAccountName: jws-operator-controller-manager
               terminationGracePeriodSeconds: 10
+        - label:
+          app.kubernetes.io/name: jws-operator-insights
+          control-plane: controller-manager
+        name: jws-operator-insights
+        spec:
+          replicas: 1
+          selector:
+            matchLabels:
+              app.kubernetes.io/name: jws-operator-insights
+              control-plane: controller-manager
+          strategy: {}
+          template:
+            metadata:
+              annotations:
+                kubectl.kubernetes.io/default-container: insights
+              labels:
+                app.kubernetes.io/name: jws-operator-insights
+                control-plane: controller-manager
+            spec:
+              containers:
+                - args:
+                    - --health-probe-bind-address=:8081
+                    - --metrics-bind-address=0
+                    - --leader-elect
+                  env:
+                    - name: RELATED_IMAGE_INSIGHTS_PROXY
+                      value: registry.redhat.io/3scale-amp2/apicast-gateway-rhel8:3scale2.15
+                    - name: INSIGHTS_BACKEND_DOMAIN
+                      value: console.redhat.com
+                    - name: USER_AGENT_PREFIX
+                      value: jws-operator/0.0.1-dev
+                    - name: WATCH_NAMESPACE
+                      valueFrom:
+                        fieldRef:
+                          fieldPath: metadata.annotations['olm.targetNamespaces']
+                    - name: OPERATOR_NAME
+                      value: jws-operator-insights
+                    - name: OPERATOR_NAMESPACE
+                      valueFrom:
+                        fieldRef:
+                          fieldPath: metadata.namespace
+                    - name: INSIGHTS_ENABLED
+                      value: "true"
+                  image: registry.redhat.io/insights-runtimes-tech-preview/runtimes-inventory-rhel8-operator:latest
+                  livenessProbe:
+                    httpGet:
+                      path: /healthz
+                      port: 8081
+                    initialDelaySeconds: 15
+                    periodSeconds: 20
+                  name: insights
+                  readinessProbe:
+                    httpGet:
+                      path: /readyz
+                      port: 8081
+                    initialDelaySeconds: 5
+                    periodSeconds: 10
+                  resources:
+                    limits:
+                      cpu: "1"
+                      memory: 256Mi
+                    requests:
+                      cpu: 100m
+                      memory: 64Mi
+                  securityContext:
+                    allowPrivilegeEscalation: false
+                    capabilities:
+                      drop:
+                        - ALL
+              securityContext:
+                runAsNonRoot: true
+                seccompProfile:
+                  type: RuntimeDefault
+              serviceAccountName: jws-operator-insights
+              terminationGracePeriodSeconds: 10
       permissions:
+      - rules:
+          - apiGroups:
+              - ""
+            resources:
+              - configmaps
+            verbs:
+              - get
+              - list
+              - watch
+              - create
+              - update
+              - patch
+              - delete
+          - apiGroups:
+              - coordination.k8s.io
+            resources:
+              - leases
+            verbs:
+              - get
+              - list
+              - watch
+              - create
+              - update
+              - patch
+              - delete
+          - apiGroups:
+              - ""
+            resources:
+              - events
+            verbs:
+              - create
+              - patch
+          - apiGroups:
+              - ""
+            resources:
+              - configmaps/finalizers
+              - secrets
+              - services
+            verbs:
+              - create
+              - get
+              - list
+              - update
+              - watch
+          - apiGroups:
+              - apps
+            resources:
+              - deployments
+              - deployments/finalizers
+            verbs:
+              - create
+              - get
+              - list
+              - update
+              - watch
+        serviceAccountName: jws-operator-insights
       - rules:
         - apiGroups:
           - ""
@@ -360,4 +499,7 @@ spec:
   maturity: alpha
   provider:
     name: WebServer community
-  version: 0.0.1
+  relatedImages:
+  - image: registry.redhat.io/3scale-amp2/apicast-gateway-rhel8:3scale2.15
+    name: insights-proxy
+  version: 0.0.2
