--- a/config/samples/v1alpha1_webserver.yaml
+++ b/config/samples/v1alpha1_webserver.yaml
@@ -1,9 +1,8 @@
 apiVersion: web.servers.org/v1alpha1
 kind: WebServer
 metadata:
-  labels:
-    app.kubernetes.io/name: jws-operator
-    app.kubernetes.io/managed-by: kustomize
-  name: webserver-sample
+  name: webserver-example
 spec:
-  # TODO(user): Add fields here
+  applicationName: webapp
+  replicas: 1
+  useInsightsClient: false
