--- a/bundle/manifests/jws-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/jws-operator.clusterserviceversion.yaml
@@ -134,6 +134,7 @@ spec:
           - apps
           resources:
           - deployments
+          - statefulsets
           verbs:
           - create
           - delete
